--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "author": "Hosea Simanjuntak <hosea.simanjuntak@anabatic.com>",
   "license": "MIT",
   "dependencies": {
-    "json-server": "^0.14.0"
+    "json-server": "^0.14.0",
+    "jsonwebtoken": "^8.1.0"
+  },
+  "scripts": {
+    "start": "json-server --watch ./db.json",
+    "start-auth": "node server.js"
   }
 }
